# flood-risk-assessment

./: docker-compose.prod.yml  docker-compose.yml  env.example  env.prod.example
backend/: .dockerignore  .env  Dockerfile  README.md  app_database.db  env.example  main.py  pyproject.toml  requirements.txt  start.sh
backend/app/api/: __init__.py  endpoints.py  user_endpoints.py
backend/app/core/: auth.py  config.py
backend/app/models/: schemas.py
backend/app/services/: clerk_service.py  database.py
frontend/: .dockerignore  .gitignore  Dockerfile  REBUILD_TRIGGER.txt  database.db  package-lock.json  package.json  vercel.json
frontend/app/: layout.tsx  page.tsx
frontend/app/api/auth/generate-token/: route.ts
frontend/app/api/auth/sync-user/: route.ts
frontend/app/api/auth/verify-token/: route.ts
frontend/app/api/health/: route.ts
frontend/app/api/webhooks/clerk/: route.ts
frontend/app/sign-in/[[...sign-in]]/: layout.tsx
frontend/app/sign-up/[[...sign-up]]/: layout.tsx
frontend/components/analysis-inputs/: analysis-inputs.tsx
frontend/components/cards/: cards.tsx
frontend/components/dialog/: dialog.tsx
frontend/components/header/: header.tsx
frontend/components/map/: map.tsx
frontend/components/navbar/: navbar.tsx
frontend/components/results/: results.tsx
frontend/lib/: api-service.ts  auth-utils.ts  database.ts  types.ts
scripts/: deploy.sh
